# TGNowPlaying

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  start.sh
TGNowPlaying/: __init__.py  __main__.py  settings.py  tasks.py
TGNowPlaying/adapters/: base.py  spotify.py
TGNowPlaying/factories/: provider_factory.py
TGNowPlaying/helpers/: music_provider.py  utils.py
TGNowPlaying/helpers/providers/: spotify.py
TGNowPlaying/plugins/: chat_id.py  listen.py  ping.py
