[tool.poetry]
name = "tgnowplaying"
version = "0.1.0"
description = ""
authors = ["Mazdak <me@mazdak.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
spotipy = "^2.24.0"
pyrogram = "^2.0.106"
pydantic-settings = "^2.3.4"
uvloop = "^0.19.0"
telegraph = "^2.2.0"
httpx = "^0.27.0"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
